--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   sqflite: ^2.3.0
   google_fonts: ^6.2.1
+  camera: ^0.11.0+2
+  permission_handler: ^10.0.0
+  image: ^4.5.2
   flutter:
     sdk: flutter
 
