--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,11 @@ dependencies:
   camera: ^0.11.0+2
   permission_handler: ^10.0.0
   image: ^4.5.2
+  http: ^1.3.0
   flutter:
     sdk: flutter
+  intl: ^0.20.1
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
