--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,17 +7,20 @@ environment:
   sdk: ^3.6.1
 
 dependencies:
-  sqflite: ^2.3.0
-  google_fonts: ^6.2.1
-  camera: ^0.11.0+2
-  permission_handler: ^10.0.0
-  image: ^4.5.2
-  http: ^1.3.0
+  sqflite: 2.3.0
+  google_fonts: 6.2.1
+  permission_handler: 10.0.0
+  image: 4.5.2
+  http: 1.3.0
   flutter:
     sdk: flutter
-  intl: ^0.20.1
-  geolocator: ^13.0.2
-
+  intl: 0.20.1
+  geolocator: 13.0.2
+  # image_picker: 1.1.2
+  camera: 0.11.1
+  path: 1.9.0
+  flutter_slidable: ^4.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
