--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.6.1
+  sdk: ">=3.6.0 <4.0.0"
 
 dependencies:
   sqflite: 2.3.0
@@ -19,7 +19,6 @@ dependencies:
   # image_picker: 1.1.2
   camera: 0.11.1
   path: 1.9.0
-  flutter_slidable: ^4.0.0
   
 dev_dependencies:
   flutter_test:
@@ -29,4 +28,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - storage/Logo_Default.png
+    - storage/
