--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: diversitree_mobile
 description: "Diversitree project."
 publish_to: 'none'
-version: 0.1.0
+version: 1.0.0
 
 environment:
   sdk: ">=3.6.0 <4.0.0"
@@ -16,10 +16,11 @@ dependencies:
     sdk: flutter
   intl: 0.20.1
   geolocator: 13.0.2
-  # image_picker: 1.1.2
   camera: 0.11.1
   path: 1.9.0
-  
+  flutter_launcher_icons: ^0.14.3
+  qr_code_scanner_plus: ^2.0.9+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
