--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   path: 1.9.0
   flutter_launcher_icons: ^0.14.3
   qr_code_scanner_plus: ^2.0.9+1
+  shared_preferences: ^2.5.1
 
 dev_dependencies:
   flutter_test:
