--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,10 +24,10 @@ android {
         applicationId = "com.diversitree"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        // minSdk = 21
-        // targetSdk = 33
+        // minSdk = flutter.minSdkVersion
+        // targetSdk = flutter.targetSdkVersion
+        minSdk = 21
+        targetSdk = 33
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
